--- a/style.css
+++ b/style.css
@@ -45,3 +45,51 @@ body {
   object-fit: cover;
   border-radius: 50%;
 }
+
+/* Main */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* Profile section */
+.profile-section {
+  width: 80%;
+  position: relative;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.user-img_profile-section {
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  bottom: 40px;
+  left: 32px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.bacground-img-box {
+  width: 100%;
+  height: 320px;
+}
+.background-image {
+  width: 100%;
+  height: 100%;
+}
+.user-info {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding-left: 200px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: rgb(217, 217, 255);
+  border-left: #ff6347 1px solid;
+  border-right: #ff6347 1px solid;
+  border-bottom: #ff6347 1px solid;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.user-adres {
+  font-size: 13px;
+}
