--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ h4 {
 .add-comment {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 .comment-form {
   display: flex;
@@ -338,7 +339,75 @@ h4 {
   background-color: #3c42e1;
   transition: 0.3s;
 }
-
+.comments-list {
+  list-style: none;
+  padding-left: 16px;
+}
+.comment-img {
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  align-self: center;
+}
+.comment-item {
+  display: flex;
+}
+.comment-info {
+  padding-left: 15px;
+  width: 80%;
+}
+.comment-owner {
+  font-size: 14px;
+  margin-bottom: 4px;
+  font-weight: 600;
+}
+.comment-text {
+  font-size: 13px;
+  background-color: #d9d9ff;
+  border-radius: 14px;
+  padding: 6px 10px;
+  width: inherit;
+}
+/**/
+.comment-actions {
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-size: 12px;
+}
+.like-btn_comment {
+  color: #3c42e1;
+  display: flex;
+  gap: 10px;
+  width: 35%;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(245, 245, 245);
+  height: 27px;
+  cursor: pointer;
+  font-size: 14px;
+  border-top: 1px solid #3c42e1;
+  border-bottom: 1px solid #3c42e1;
+  border-radius: 8px;
+  border-left: none;
+  border-right: none;
+  transition: 0.3s;
+}
+.like-btn_comment:hover {
+  background-color: #6063a0;
+  color: #fff;
+  transition: 0.3s;
+}
+.comment-stats {
+  font-size: 12px;
+  color: #555;
+}
+.likes-count:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 .hidden {
   display: none;
 }
