Update Like button to support unlike and UI feedback

--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ h4 {
 }
 .comment-btn:hover,
 .like-btn:hover {
-  background-color: #6063a0;
+  background-color: #9294b3;
   color: #fff;
   transition: 0.3s;
 }
