--- a/style.css
+++ b/style.css
@@ -404,10 +404,23 @@ h4 {
 .comment-stats {
   font-size: 12px;
   color: #555;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 .likes-count:hover {
   text-decoration: underline;
   cursor: pointer;
+}
+.whoLike {
+  display: none;
+  width: 140px;
+  text-wrap: wrap;
+  color: #fdfdfd;
+  background-color: #6f74f4;
+}
+.comment-stats:hover .whoLike {
+  display: block;
 }
 .hidden {
   display: none;
