Refactor: apply global reset and base styles

--- a/style.css
+++ b/style.css
@@ -1,484 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
 html,
 body {
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-}
-.loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #ff6347;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  animation: spin 1s linear infinite;
-  margin: 350px auto;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-/* Navigation */
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #6f74f4;
-  border-bottom: 1px solid #ff6347;
-  padding: 9px 16px;
-}
-.search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  height: 16px;
-  border-radius: 16px;
-  padding: 6px 16px;
-}
-.find-friends:focus {
-  outline: none;
-}
-.find-friends {
-  background-color: #fff;
-  height: 16px;
-  margin-left: 8px;
-  font-size: 16px;
-  border: none;
-}
-.search-icon {
-  width: 17px;
-  height: 17px;
-}
-.luka-img {
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-/* Main */
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-/* Profile section */
-.profile-section {
-  width: 80%;
-  position: relative;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-.user-img_profile-section {
-  height: 120px;
-  width: 120px;
-  position: absolute;
-  bottom: 40px;
-  left: 32px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.bacground-img-box {
-  width: 100%;
-  height: 320px;
-}
-.background-image {
-  width: 100%;
-  height: 100%;
-}
-.user-info {
-  display: flex;
-  flex-direction: column;
-  gap: 7px;
-  padding-left: 200px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  background-color: rgb(217, 217, 255);
-  border-left: #ff6347 1px solid;
-  border-right: #ff6347 1px solid;
-  border-bottom: #ff6347 1px solid;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-.user-adres {
-  font-size: 13px;
-}
-/*New post*/
-.new-post {
-  display: flex;
-  justify-content: center;
-  margin: 16px 0px;
-}
-.post-form {
-  display: flex;
-  width: 600px;
-}
-.post-input {
-  background-color: rgb(217, 217, 255);
-  padding-left: 8px;
-  margin-left: 8px;
-  height: 32px;
-  width: 100%;
-  font-size: 16px;
-  border: none;
-  border-radius: 15px;
-}
-.post-input:focus {
-  outline: none;
-}
-.submit-btn {
-  background-color: rgb(128, 124, 255);
-  color: rgb(255, 255, 255);
-  font-weight: 600;
-  cursor: pointer;
-  width: 200px;
-  border: #ff6347 2px solid;
-  border-radius: 8px;
-  margin: 0px 8px;
-  transition: 0.3s;
-}
-.submit-btn:hover {
-  background-color: #ff6347;
-  transition: 0.3s;
-}
-/*Friends and comments*/
-.friends-section {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  background-color: rgb(217, 217, 255);
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-/*Friends*/
-.friends {
-  border-radius: 10px;
-  padding: 10px;
-  background-color: #fff;
-  width: 450px;
-  height: 370px;
-}
-.friends-list {
-  justify-content: space-evenly;
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-}
-h4 {
-  font-size: 24px;
-  margin: 8px 25px;
-}
-.number_of_friends {
-  font-size: 16px;
-  margin-left: 25px;
-  margin-bottom: 20px;
-}
-.friend {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 15px;
-}
-.friend-paragraph {
-  font-size: 12px;
-}
-.friend-img {
-  height: 100px;
-  width: 123px;
-  align-self: center;
-  justify-self: center;
-  object-fit: cover;
-  border-radius: 16px;
-}
-/*Posts*/
-.posts {
-  list-style-type: none;
-}
-.post-item {
-  width: 520px;
-  background-color: #ff6347;
-  margin-bottom: 16px;
-  border-radius: 8px;
-  padding: 16px;
-}
-/*Post owner info*/
-.post-owner-info {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-.img-post_owner {
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.name_date-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 8px;
-}
-.post-owner-name {
-  font-size: 18px;
-  font-weight: 600;
-}
-.post-date {
-  font-size: 12px;
-  color: rgb(255, 255, 255);
-}
-.post-text {
-  overflow-wrap: break-word;
-  color: #3c42e1;
-  margin: 17px 0px;
-  font-size: 21px;
-  font-weight: bolder;
-}
-.likes-comments-number {
-  display: flex;
-  justify-content: space-between;
-  font-size: 13.5px;
-}
-.img-profile_small {
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.comments-paragraph {
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
-.comments-paragraph:hover {
-  color: #3c42e1;
-  transition: 0.3s;
-}
-/*BTN*/
-.post-btn {
-  display: flex;
-  justify-content: space-between;
-  margin: 8px 0 16px;
-  width: 100%;
-}
-.icon-btn {
-  width: 20px;
-  height: 20px;
-}
-.comment-btn,
-.like-btn {
-  color: #3c42e1;
-  display: flex;
-  gap: 10px;
-  width: 49%;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(245, 245, 245);
-  height: 27px;
-  cursor: pointer;
-  font-size: 14px;
-  border-top: 1px solid #3c42e1;
-  border-bottom: 1px solid #3c42e1;
-  border-radius: 8px;
-  border-left: none;
-  border-right: none;
-  transition: 0.3s;
-}
-.comment-btn:hover,
-.like-btn:hover {
-  background-color: #9294b3;
-  color: #fff;
-  transition: 0.3s;
-}
-/*Add comment*/
-.add-comment {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.comment-form {
-  display: flex;
-  justify-content: space-between;
-  width: 90%;
-}
-.write-comment-input {
-  background-color: rgb(255, 255, 255);
-  padding-left: 9px;
-  margin-left: 8px;
-  height: 32px;
-  width: 70%;
-  font-size: 14px;
-  border: none;
-  border-radius: 15px;
-}
-.write-comment-input:focus {
-  outline: 2px;
-  outline-color: #3c42e1;
-  outline-style: solid;
-}
-.add-comment-btn {
-  background-color: rgb(128, 124, 255);
-  color: rgb(255, 255, 255);
-  font-weight: 600;
-  cursor: pointer;
-  width: 100px;
-  border-radius: 8px;
-  margin: 0px 8px;
-  border: #3c42e1 2px solid;
-  transition: 0.3s;
-}
-.add-comment-btn:hover {
-  background-color: #3c42e1;
-  transition: 0.3s;
-}
-.comments-list {
-  list-style: none;
-  padding-left: 16px;
-}
-.comment-img {
-  border-radius: 50%;
-  height: 45px;
-  width: 45px;
-  object-fit: cover;
-  align-self: center;
-}
-.comment-item {
-  display: flex;
-  margin-bottom: 20px;
-}
-.comment-info {
-  padding-left: 15px;
-  width: 80%;
-}
-.comment-owner {
-  font-size: 14px;
-  margin-bottom: 4px;
-  font-weight: 600;
-}
-.comment-text {
-  font-size: 13px;
-  background-color: #d9d9ff;
-  border-radius: 14px;
-  padding: 6px 10px;
-  width: inherit;
-}
-/**/
-.comment-actions {
-  margin-top: 6px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  font-size: 12px;
-}
-.like-btn_comment {
-  color: #3c42e1;
-  display: flex;
-  gap: 10px;
-  width: 35%;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(245, 245, 245);
-  height: 27px;
-  cursor: pointer;
-  font-size: 14px;
-  border-top: 1px solid #3c42e1;
-  border-bottom: 1px solid #3c42e1;
-  border-radius: 8px;
-  border-left: none;
-  border-right: none;
-  transition: 0.3s;
-}
-.like-btn_comment:hover {
-  color: #ff6347;
-  transition: 0.3s;
-}
-.comment-stats {
-  font-size: 12px;
-  color: #555;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.likes-count:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.whoLike {
-  display: none;
-  width: 140px;
-  text-wrap: wrap;
-  color: #fdfdfd;
-  background-color: #6f74f4;
-}
-.btn-edit {
-  /* tamnoplava */
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #1a237e; /* beli tekst */
-  border: none;
-  font-size: 30px;
-  background-color: #ff6347;
-  line-height: 1;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn-edit:hover {
-  color: #3949ab; /* svetlija nijansa plave */
-}
-.post-text-box {
-  display: flex;
-  align-items: center;
-}
-.text-edited {
-  color: #d31e1e;
-  font-weight: 700;
-}
-.finish-edit {
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-  background-color: #ff6347;
-  margin-left: 10px;
-}
-.cancel-btn {
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  background-color: #ff6347;
-  margin-left: 10px;
-}
-.edit-form {
-  width: 100%;
-}
-.edit-input {
-  overflow-wrap: break-word;
-  color: #3c42e1;
-  margin: 17px 0px;
-  font-size: 21px;
-  font-weight: bolder;
-  width: 80%;
-}
-.edit-input:focus {
-  outline-color: #3c42e1;
-}
-.comment-stats:hover .whoLike {
-  display: block;
-}
-.hidden {
-  display: none;
+  background-color: #f4f6f9;
+  color: #333;
 }
