--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
   width: 18px;
   height: 18px;
   opacity: 0.7;
+  color: #333;
 }
 
 .luka-img {
@@ -72,4 +73,12 @@ body {
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid white;
+}
+
+/* Main */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
