--- a/style.css
+++ b/style.css
@@ -450,3 +450,74 @@ h4 {
   background-color: white;
   border: none;
 }
+.heart-icon {
+  color: #ff6347;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.comment-stats {
+  font-size: 12px;
+  color: #555;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.likes-count:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.whoLike {
+  width: 140px;
+  text-wrap: wrap;
+  color: #fdfdfd;
+  position: absolute;
+  font-size: 9px;
+  top: 1px;
+  right: 90px;
+  background-color: #4c6ef5;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.btn-edit {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  border: none;
+  font-size: 20px;
+  background-color: #4c6ef5;
+  padding: 4px 8px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-edit:hover {
+  background-color: #364fc7;
+}
+
+.post-text-box {
+  display: flex;
+  align-items: center;
+}
+
+.text-edited {
+  color: #d31e1e;
+  font-weight: 700;
+}
+
+.finish-edit,
+.cancel-btn {
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  background-color: #4c6ef5;
+  color: white;
+  margin-left: 10px;
+  padding: 4px 10px;
+  border-radius: 6px;
+}
